mobile view added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#52CCA8"/>
+    <meta name="msapplication-navbutton-color" content="#52CCA8">     <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#52CCA8">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
+
     <meta
             name="description"
             content="Teste de Portas Abertas - Testa porta do servidor, roteador, CFTV ou modem. Você pode verificar e scanear as portas de todos protocolos: TCP, UDP, FTP, SSH, HTTP, HTTPS, TCP, etc."
