theme color updated

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#52CCA8"/>
-    <meta name="msapplication-navbutton-color" content="#52CCA8">     <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#52CCA8">
+    <meta name="theme-color" content="#302D41"/>
+    <meta name="msapplication-navbutton-color" content="#302D41">     <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#302D41">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
